--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.activity.GuideActivity" />
-        <activity android:name=".activity.activity.MainActivity"></activity>
+        <activity android:name=".activity.activity.MainActivity"
+            android:theme="@style/Theme.PageIndicatorDefaults"
+            ></activity>
     </application>
 
 </manifest>
