--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.google.code.gson:gson:2.8.1'
     compile project(':ViewPagerIndicator_library')
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 }
