Android-PullToRefresh下拉刷新的使用

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
-include ':app'
+include ':app', ':BeiJingNewsLibrary'
 include ':library'
 include ':ViewPagerIndicator_library'
+include ':PullToRefresh-library'
