--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile project(':ViewPagerIndicator_library')
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile project(':PullToRefresh-library')
+    compile project(':BeiJingNewsLibrary')
 }
