--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="myapplication.beijingnews">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/icon_150"
@@ -16,9 +18,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.activity.GuideActivity" />
-        <activity android:name=".activity.activity.MainActivity"
-            android:theme="@style/Theme.PageIndicatorDefaults"
-            ></activity>
+        <activity
+            android:name=".activity.activity.MainActivity"
+            android:theme="@style/Theme.PageIndicatorDefaults" />
+        <activity android:name=".activity.activity.NewsDetailActivity"></activity>
     </application>
 
 </manifest>
