--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile project(':PullToRefresh-library')
     compile project(':BeiJingNewsLibrary')
+    compile 'com.android.support:recyclerview-v7:25.3.1'
 }
