--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,8 @@ dependencies {
     compile project(':PullToRefresh-library')
     compile project(':BeiJingNewsLibrary')
     compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile project(':photoview')
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    //compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:design:26.0.0-alpha1'
 }
