--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="myapplication.beijingnews">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/icon_150"
@@ -21,7 +22,8 @@
         <activity
             android:name=".activity.activity.MainActivity"
             android:theme="@style/Theme.PageIndicatorDefaults" />
-        <activity android:name=".activity.activity.NewsDetailActivity"></activity>
+        <activity android:name=".activity.activity.NewsDetailActivity" />
+        <activity android:name=".activity.activity.PicassoSampleActivity"></activity>
     </application>
 
 </manifest>
